--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
 #source: https://askubuntu.com/questions/1375589/what-are-the-different-versions-available-as-ubuntu-cloud-images-general-guid
 #source: https://blog.programster.org/create-ubuntu-20-kvm-guest-from-cloud-image
+- name: start Cloudinit
+  ansible.builtin.include_role:
+    name: cloud-init
 
 - name: create kvm vm instance
   block:
