--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,77 +1,98 @@
 ---
-#source: https://askubuntu.com/questions/1375589/what-are-the-different-versions-available-as-ubuntu-cloud-images-general-guid
-#source: https://blog.programster.org/create-ubuntu-20-kvm-guest-from-cloud-image
-- name: start Cloudinit # FixMe: new import mechanism
+# source: https://askubuntu.com/questions/1375589/what-are-the-different-versions-available-as-ubuntu-cloud-images-general-guid
+# source: https://blog.programster.org/create-ubuntu-20-kvm-guest-from-cloud-image
+- name: Start Cloudinit # FixMe: new import mechanism
   ansible.builtin.include_role:
-    name: cloud-init
+    name: ansible_role_cloud_init
 
-- name: create kvm vm instance
+- name: Create kvm vm instance
   block:
-    # necessary condition 
-    - name: pre_task - checks and installations
+    # necessary condition
+    - name: Pre_task - checks and installations
       include_tasks: pre-install.yml
 
     # mkdir template
-    - name: create directory
+    - name: Create template directory
       ansible.builtin.file:
-        path: '{{ kvm_image_path }}/templates'
+        path: '{{ ci_image_path }}/templates'
         state: directory
         owner: libvirt-qemu
         group: kvm
         mode: '0711'
 
-    # download checksum-file
-    - name: download checksumfile
+    # mkdir template
+    - name: Create temp directory
+      ansible.builtin.tempfile:
+        state: directory
+        suffix: temp
+      register: tempfilepath
+      delegate_to: localhost
+
+      # download checksum-file
+    - name: Download checksumfile
       ansible.builtin.get_url:
-        url: '{{ kvm_cloudimage_kvm_checksum }}'
-        dest: '{{ kvm_image_path }}/templates'
+        url: "{{ ci_cloudimage_checksum }}"  # todo
+        dest: "{{ tempfilepath.path }}"
+        owner: "{{ local_user }}"
+        group: "{{ local_group }}"
+        mode: '0600'
+      delegate_to: localhost
 
-    - name: get checksumfile
-      ansible.builtin.slurp:
-        src: "{{ kvm_image_path }}/templates/SHA256SUMS"
-      register: sha256sum
+    - name: Set_fact - read checksumfile to var sha256sum
+      ansible.builtin.set_fact:
+        sha256sum: "{{ lookup('file', '{{ tempfilepath.path }}/SHA256SUMS') }}"
+      delegate_to: localhost
 
-    # a bit og regex dark magic
-    # one file with a lot of checksums
-    # target-line: 432ec0aed11aa044b8626bc485e93bd2c53ab9a376c111627ff399138bc3769f *impish-server-cloudimg-amd64-disk-kvm.img
-    # '\\1' -> group1
-    - name: set_fact - file chechsum
-      set_fact:
-        fileSHA256: "{{ sha256sum['content'] | b64decode | split('\n') | regex_search('(.{64})\\s\\*impish-server-cloudimg-amd64-disk-kvm\\.img', '\\1') }}"
+    - name: Set_fact - build regex search string
+      ansible.builtin.set_fact:
+        regex_search_string: "(.{64})\\s\\*{{ ci_image_name | replace('.', '\\.') }}"  # todo
+      delegate_to: localhost
+
+      # a bit of regex dark magic
+      # one file with a lot of checksums
+      # target-line: bf1d8a9ab3e3005fd3d50c6d094b96bf9345b2f287e38d22cf98d2b798e2cb2a *impish-server-cloudimg-amd64.ova
+      # '\\1' -> group1
+    - name: Set_fact - file chechsum
+      ansible.builtin.set_fact:
+        file_sha_256: "{{ sha256sum | split('\n') | regex_search( regex_search_string | string, '\\1') }}"
+      delegate_to: localhost
 
     # download image
-    - name: download latest kvm_image
+    - name: Download latest ci_image
       ansible.builtin.get_url:
-        url: "{{ kvm_cloudimage_kvm_url }}"
-        dest: '{{ kvm_image_path }}/templates'
-        checksum: sha256:'{{ fileSHA256 }}'
-        force: False
+        url: "{{ ci_image_url }}"
+        dest: '{{ ci_image_path }}/templates'
+        checksum: sha256:'{{ file_sha_256 }}'
+        owner: libvirt-qemu
+        group: kvm
+        mode: '0640'
+        force: false
 
-    - name: convert image file
+    - name: Convert image file  # noqa no-changed-when
       ansible.builtin.shell:
         cmd: >
-          qemu-img convert -f qcow2 -O qcow2 
-          {{ kvm_image_path }}/templates/{{ kvm_image_name }} 
-          {{ kvm_image_path }}/{{ cloudinit_fqdn }}.qcow2
+          qemu-img convert -f qcow2 -O qcow2
+          {{ ci_image_path }}/templates/{{ ci_image_name }}
+          {{ ci_image_path }}/{{ cloudinit_fqdn }}.qcow2
 
-    - name: resize image file
+    - name: Resize image file  # noqa no-changed-when
       ansible.builtin.shell:
         cmd: >
-          qemu-img resize {{ kvm_image_path }}/{{ cloudinit_fqdn }}.qcow2 {{ kvm_image_size }}
+          qemu-img resize {{ ci_image_path }}/{{ cloudinit_fqdn }}.qcow2 {{ ci_image_size }}
 
-    - name: fixup user group settings
+    - name: Fixup user group settings  # noqa no-changed-when
       ansible.builtin.file:
-        path: '{{ kvm_image_path }}/{{ cloudinit_fqdn }}.qcow2'
+        path: '{{ ci_image_path }}/{{ cloudinit_fqdn }}.qcow2'
         owner: libvirt-qemu
         group: kvm
         mode: '0600'
 
-    - name: import vm
+    - name: Import vm  # noqa no-changed-when
       ansible.builtin.shell:
         cmd: >
           virt-install --import --noautoconsole --quiet --qemu-commandline="-smbios type=1,serial=ds=nocloud"
           --name {{ cloudinit_fqdn }} --memory 2048 --os-type linux --os-variant ubuntu21.04
-          --disk {{ kvm_image_path }}/{{ cloudinit_fqdn }}-cloudinit.iso,device=cdrom
-          --disk {{ kvm_image_path }}/{{ cloudinit_fqdn }}.qcow2,device=disk,bus=virtio 
+          --disk {{ ci_image_path }}/{{ cloudinit_fqdn }}-cloudinit.iso,device=cdrom
+          --disk {{ ci_image_path }}/{{ cloudinit_fqdn }}.qcow2,device=disk,bus=virtio
           --virt-type kvm --graphics none --network network=default,model=virtio
 ...
